Connect Site and StoreFront API
